Interface refactoring, sidenav and modal

--- a/frontendSIGUI/src/app/components/angular-components/geodata/geo-elements/manipulates/manipulate-county/manipulate-county.component.html
+++ b/frontendSIGUI/src/app/components/angular-components/geodata/geo-elements/manipulates/manipulate-county/manipulate-county.component.html
@@ -9,13 +9,13 @@
             <div style="width: auto;">
                 <label>Buscar Municipio </label>
             </div>                   
-            <input class="input-filter" type="text" formControlName="idMunicipio">
+            <input class="input-data input-filter color-pallete" type="text" formControlName="idMunicipio">
         </div>
         <div class="box-field">                  
             <label >Código UF </label>
-            <input class="input-filter-secondary" type="text" formControlName="idState">  
+            <input class="input-search color-pallete" type="text" formControlName="idState">  
             <button mat-icon-button type="submit"> 
-                <mat-icon >menu</mat-icon>
+                <mat-icon >search</mat-icon>
             </button>  
         </div>
     <div class="button-colum">
