--- a/frontendSIGUI/src/app/components/angular-components/geodata/tables/table-county/table-county.component.html
+++ b/frontendSIGUI/src/app/components/angular-components/geodata/tables/table-county/table-county.component.html
@@ -1,10 +1,16 @@
 <div class="div-select">
-<div class="div-s div-title"> 
-    <h3>GERENCIAR MUNICIPIO</h3>
+<div class="div-s div-title header-light-pallete"> 
+    <h3 style="float: left; ">GERENCIAR MUNICIPIO</h3>
+    <button mat-icon-button disabled aria-label="Excluir" style="float: right;">
+        <mat-icon>delete</mat-icon>
+    </button>
+    <button mat-icon-button disabled aria-label="Editar" style="float: right;">
+        <mat-icon>edit</mat-icon>
+    </button>
     <!-- <div class="divider-div header-light-pallete"></div>    -->
 </div>
 <div class="div-s div-img">
-<img [src]="imgLogo" class="img-element" width="128" height="40">
+<!-- <img [src]="imgLogo " class="img-element"> -->
 </div>
 </div>
 <div>
