--- a/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup-control/popup-control-county/popup-control-county.component.html
+++ b/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup-control/popup-control-county/popup-control-county.component.html
@@ -1,8 +1,11 @@
 
  <table> 
     <tr>
-        <h3>MUNICIPIO</h3>
-        <div class="divider-div header-light-pallete"></div>
+        <td colspan="5">
+            <div class="divider-div header-light-pallete "></div>
+            <h3>Opções para MUNICIPIO</h3>     
+            <mat-divider style="width: 100%;"></mat-divider>       
+        </td>
     </tr>
     <tr> 
         <td class="col-header"></td>
