--- a/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup-control/popup-control-street/popup-control-street.component.html
+++ b/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup-control/popup-control-street/popup-control-street.component.html
@@ -1,7 +1,10 @@
 <table> 
     <tr>
-        <h3>Rua</h3>
-        <div class="divider-div header-light-pallete"></div>
+        <td colspan="5">
+            <div class="divider-div header-light-pallete "></div>
+            <h3>Opções para RUA</h3>     
+            <mat-divider style="width: 100%;"></mat-divider>       
+        </td>  
     </tr>
     <tr> 
         <td class="col-header"></td>
