--- a/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup-control/popup-control-unit/popup-control-unit.component.html
+++ b/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup-control/popup-control-unit/popup-control-unit.component.html
@@ -1,7 +1,10 @@
 <table> 
     <tr>
-        <h3>Estado</h3>
-        <div class="divider-div header-light-pallete"></div>
+        <td colspan="5">
+            <div class="divider-div header-light-pallete "></div>
+            <h3>Opções para UNIDADE FEDERATIVA</h3>     
+            <mat-divider style="width: 100%;"></mat-divider>       
+        </td>            
     </tr>
     <tr> 
         <td class="col-header"></td>
@@ -17,19 +20,5 @@
         </button>
         </td>
     </tr>  
-</table>  
+</table> 
 
-<table>
-    <tr>
-        <th colspan="3">Opções para o Vertice:</th>
-    </tr>
-    <tr>
-        <td > Estado:</td>
-        <td>                     
-            <button id='btn_AdicionarRede' mat-flat-button color="primary" (click)="enableDivMunicipio()"> Adicionar </button>
-        </td>
-        <td>                     
-            <button id='btn_AdicionarRede' mat-flat-button color="primary" (click)="connectFeatureFromState()"> Associar </button>
-        </td>
-    </tr>    
-</table>  
