--- a/frontendSIGUI/src/app/layout/geo-data/geo-data.component.html
+++ b/frontendSIGUI/src/app/layout/geo-data/geo-data.component.html
@@ -43,6 +43,9 @@
         <div class="container" *ngIf="managerManipulation.session_estructure"> 
             <app-manage-equipament-urban></app-manage-equipament-urban>
         </div>
+        <div class="container" *ngIf="managerManipulation.session_network"> 
+            <app-manage-network-infra></app-manage-network-infra>
+        </div>
      
-    </mat-drawer>
+    </mat-drawer>s
 </mat-drawer-container>
