--- a/frontendSIGUI/src/app/layout/home-page/home-page.component.html
+++ b/frontendSIGUI/src/app/layout/home-page/home-page.component.html
@@ -14,12 +14,12 @@
             </mat-list-item>
             <mat-divider></mat-divider>       
             <mat-list-item class="white-pallete-light" (click)="onClickGeoLayers()">
-                <mat-icon mat-list-icon class="light-icon">grid_on</mat-icon> 
+                <mat-icon mat-list-icon class="light-icon">map</mat-icon> 
                 <span *ngIf="isExpanded">Camadas</span>
             </mat-list-item>
             <mat-divider></mat-divider>       
             <mat-list-item class="white-pallete-light" (click)="onClickGeoData()">
-                <mat-icon mat-list-icon class="light-icon">grid_on</mat-icon> 
+                <mat-icon mat-list-icon class="light-icon">travel_explore</mat-icon> 
                 <span *ngIf="isExpanded">Geo Dados</span>
             </mat-list-item>
             <mat-divider></mat-divider>       
