--- a/frontendSIGUI/src/app/components/angular-components/geodata/containers/container-county/container-county.component.html
+++ b/frontendSIGUI/src/app/components/angular-components/geodata/containers/container-county/container-county.component.html
@@ -6,7 +6,7 @@
     <div class="container" *ngIf="true">          
         <app-table-county></app-table-county>
     </div>
-    <div class="container">         
+    <!-- <div class="container">         
         <div class="wrapper-manipulation">
             <div class="box-field-ex">
                 <button mat-flat-button class="button-control-data" color="primary" > 
@@ -21,5 +21,5 @@
                 </button>               
             </div>
         </div> 
-    </div> 
+    </div>  -->
 </div>
