--- a/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup-control/popup-control-publicplace/popup-control-publicplace.component.html
+++ b/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup-control/popup-control-publicplace/popup-control-publicplace.component.html
@@ -1,7 +1,10 @@
 <table> 
-    <tr>
-        <h3>Logradouro</h3>
-        <div class="divider-div header-light-pallete"></div>
+    <tr>        
+        <td colspan="5">
+            <div class="divider-div header-light-pallete "></div>
+            <h3>Opções para LOGRADOURO</h3>     
+            <mat-divider style="width: 100%;"></mat-divider>       
+        </td>    
     </tr>
     <tr> 
         <td class="col-header"></td>
