table view data structure

--- a/frontendSIGUI/src/app/components/angular-components/geodata/containers/container-county/container-county.component.html
+++ b/frontendSIGUI/src/app/components/angular-components/geodata/containers/container-county/container-county.component.html
@@ -3,23 +3,7 @@
         <app-manipulate-county></app-manipulate-county>                    
     </div>
     <!-- managerVizualizaton.session_county -->
-    <div class="container" *ngIf="true">          
-        <app-table-county></app-table-county>
-    </div>
-    <!-- <div class="container">         
-        <div class="wrapper-manipulation">
-            <div class="box-field-ex">
-                <button mat-flat-button class="button-control-data" color="primary" > 
-                    <mat-icon >home</mat-icon><br> 
-                    <span>Excluir Municipios</span>           
-                </button>   
-            </div>
-            <div class="box-field-ed">
-                <button mat-flat-button class="button-control-data" color="primary" > 
-                    <mat-icon >home</mat-icon><br> 
-                    <span> Editar Municipios</span>           
-                </button>               
-            </div>
-        </div> 
-    </div>  -->
+    <div class="container" *ngIf="viewData">          
+        <app-table-county [data]="data" style="width: 100%;"></app-table-county>
+    </div>    
 </div>
