--- a/frontendSIGUI/src/app/components/angular-components/geodata/containers/container-infrastructure/container-infrastructure.component.html
+++ b/frontendSIGUI/src/app/components/angular-components/geodata/containers/container-infrastructure/container-infrastructure.component.html
@@ -3,7 +3,7 @@
         <app-manipulate-infrastructure></app-manipulate-infrastructure>                    
     </div>
     <!-- managerVizualizaton.session_county -->
-    <div class="container" *ngIf="true">          
-        <app-table-county></app-table-county>
+    <div class="container" *ngIf="viewData">          
+        <app-table-infrastructure [data]="data" style="width: 100%;"></app-table-infrastructure>
     </div>   
 </div>
