--- a/frontendSIGUI/src/app/components/angular-components/geodata/containers/container-street/container-street.component.html
+++ b/frontendSIGUI/src/app/components/angular-components/geodata/containers/container-street/container-street.component.html
@@ -3,7 +3,7 @@
         <app-manipulate-street></app-manipulate-street>                    
     </div>
     <!-- managerVizualizaton.session_county -->
-    <div class="container" *ngIf="true">          
-        <app-table-county></app-table-county>
+    <div class="container" *ngIf="viewData">          
+        <app-table-street [data]="data" style="width: 100%;"></app-table-street>
     </div>    
 </div>
