--- a/frontendSIGUI/src/app/components/angular-components/geodata/containers/container-urban-equipment/container-urban-equipment.component.html
+++ b/frontendSIGUI/src/app/components/angular-components/geodata/containers/container-urban-equipment/container-urban-equipment.component.html
@@ -3,7 +3,7 @@
         <app-manipulate-urban-equipment></app-manipulate-urban-equipment>                    
     </div>
     <!-- managerVizualizaton.session_county -->
-    <div class="container" *ngIf="true">          
-        <app-table-county></app-table-county>
+    <div class="container" *ngIf="viewData">          
+        <app-table-equipament [data]="data" style="width: 100%;"></app-table-equipament>
     </div>    
 </div>
