--- a/frontendSIGUI/src/app/components/angular-components/geodata/containers/container-urban-network/container-urban-network.component.html
+++ b/frontendSIGUI/src/app/components/angular-components/geodata/containers/container-urban-network/container-urban-network.component.html
@@ -3,7 +3,7 @@
         <app-manipulate-urban-network></app-manipulate-urban-network>                    
     </div>
     <!-- managerVizualizaton.session_county -->
-    <div class="container" *ngIf="true">          
-        <app-table-county></app-table-county>
+    <div class="container" *ngIf="viewData">          
+        <app-table-network [data]="data"  style="width: 100%;"></app-table-network>
     </div>
 </div>
