Shapefile handling expansion

--- a/frontendSIGUI/src/app/components/angular-components/geodata/modals/modal-files-street/modal-files-street.component.html
+++ b/frontendSIGUI/src/app/components/angular-components/geodata/modals/modal-files-street/modal-files-street.component.html
@@ -1,6 +1,6 @@
 <div class="subtitle-nav header-light-pallete">
     <div class="control">
-        <h2 class="secondary-text ">ShapeFiles de Municipios</h2>
+        <h2 class="secondary-text ">ShapeFiles de Ruas</h2>
         <button mat-button (click)="onNoClick()">Close</button>
     </div>
  </div>
