--- a/frontendSIGUI/src/app/components/angular-components/geodata/modals/modal-files-county/modal-files-county.component.css
+++ b/frontendSIGUI/src/app/components/angular-components/geodata/modals/modal-files-county/modal-files-county.component.css
@@ -39,6 +39,12 @@
     width: 100%;
     float: right;
     display: flex;
+    left: 20px;
+    position: relative;
+    top: 5px;
+}
+.sub{
+    position: relative;
 }
 
 .control h2{
