Vertex manipulation settings

--- a/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup-control/popup-control-county/popup-control-county.component.html
+++ b/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup-control/popup-control-county/popup-control-county.component.html
@@ -10,11 +10,17 @@
     <tr> 
         <td class="col-header"></td>
         <td class="col-content">
-        <button mat-icon-button color="primary">
+        <button mat-icon-button color="primary" (click)="excludeFeature()">
             <mat-icon>delete</mat-icon>
         </button>    
         </td>
-        <td class="col-content">
+        <td class="col-content" *ngIf="validEdit" >
+            <button class="button-event" (click)="connectFeatureFromCounty()">
+                <mat-icon >home</mat-icon> 
+                Visualizar 
+            </button>
+        </td>
+        <td class="col-content" *ngIf="validSave" >
         <button class="button-event" (click)="connectFeatureFromCounty()">
             <mat-icon >home</mat-icon> 
             Adicionar 
