--- a/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup-control/popup-control-infrastructure/popup-control-infrastructure.component.html
+++ b/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup-control/popup-control-infrastructure/popup-control-infrastructure.component.html
@@ -25,7 +25,13 @@
                 Adicionar DestinO
             </button>
         </td>
-        <td class="col-content">
+        <td class="col-content" *ngIf="validEdit" >
+            <button class="button-event" (click)="connectFeatureFromInfrastructure()">
+            <mat-icon >home</mat-icon> 
+                Visualizar 
+            </button>
+        </td>
+        <td class="col-content" *ngIf="validSave">
             <button class="button-event" (click)="connectFeatureFromInfrastructure()">
             <mat-icon >home</mat-icon> 
                 Adicionar 
